# doors

./:  .gitattributes  .editorconfig  .flutter-plugins-dependencies  .gitattributes  .gitignore  Cargo.toml  Makefile  analysis_options.yaml  go.work  go.work.sum  local.properties  names.md  pubspec.yaml  readme.md  rust-toolchain.toml  rustfmt.toml  settings.gradle.kts
.cargo/: config.toml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.zed/: settings.json
doors_app/: Makefile  readme.md
doors_app/flutter/doors/: .gitignore  Makefile  README.md  l10n.yaml  pubspec.yaml
doors_app/flutter/doors/assets/: door.xcf
doors_app/flutter/doors/lib/: app_page.dart  main.dart  main_app.dart  main_page.dart
doors_app/flutter/doors/linux/: CMakeLists.txt
doors_app/flutter/doors/test/: widget_test.dart
doors_app/flutter/doors/web/: index.html  manifest.json
doors_app/flutter/doors/windows/: CMakeLists.txt
doors_app/go/: Makefile
doors_app/go/doors/: go.mod  go.sum  main.go
doors_app/go/doors/views/: category.go  main_app.go  theme.go
doors_app/rust/: Makefile
doors_app/rust/app_egui/: Cargo.toml
doors_app/rust/app_egui/src/: bars.rs  doors_ui.rs  lib.rs  message.rs  partner.rs  run.rs
doors_app/rust/app_egui/src/app/: android.rs  web.rs
doors_lib/: Makefile  readme.md
doors_lib/dart/: .gitignore  .metadata  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
doors_lib/dart/android/: build.gradle
doors_lib/dart/example/: README.md  pubspec.yaml
doors_lib/dart/example/lib/: main.dart
doors_lib/dart/example/linux/: CMakeLists.txt
doors_lib/dart/example/windows/: CMakeLists.txt
doors_lib/dart/hook/: _build.dart
doors_lib/dart/ios/: idl.podspec
doors_lib/dart/ios/Classes/: idl.c
doors_lib/dart/lib/: idl.dart  idl_bindings_generated.dart
doors_lib/dart/lib/ffi_rpc/: dart_impl.dart  header_type.dart  idl.dart
doors_lib/dart/lib/idl/: base_base_generated.dart  base_idl_generated.dart  chat_chat_generated.dart  ffi_data_ffi_data_generated.dart  ffi_rpc_ffi_rpc_generated.dart  net_data_type_net_data_type_generated.dart  net_discovery_net_discovery_generated.dart  partner_idl_generated.dart  partner_partner_generated.dart
doors_lib/dart/lib/ids/: ids.dart
doors_lib/dart/lib/kits/: environment.dart  platform.dart  ulid.dart  value_notifier_ex.dart
doors_lib/dart/linux/: CMakeLists.txt
doors_lib/dart/macos/: idl.podspec
doors_lib/dart/test/ffi_rpc/: dart_impl_test.dart
doors_lib/dart/windows/: CMakeLists.txt
doors_lib/go/: go.mod  go.sum
doors_lib/go/gen_ffi_rpc/: README.md  go.mod
doors_lib/go/gen_ffi_rpc/rust/: rust.go
doors_lib/go/go_lib/: files.go  go.mod
doors_lib/go/idl/: Frame.go  Message.go  MessageAck.go  MessageBody.go  OnLine.go  OnLineAck.go  Partner.go  Timestamp.go  UByte16.go  UByte32.go  UByte8.go
doors_lib/idl/: Makefile  base.fbs  build_go.bat  build_rust.bat  build_rust.sh  partner.fbs
doors_lib/idl_fbs/: Makefile  base.fbs  chat.fbs  ffi_data.fbs  ffi_rpc.fbs  net_data_type.fbs  net_discover.fbs  net_discovery.fbs  partner.fbs
doors_lib/rust/: Cargo.toml  Makefile  rustfmt.toml
doors_lib/rust/dchat/: Cargo.toml  build.rs
doors_lib/rust/dchat/src/: lib.rs
doors_lib/rust/dchat/src/app/: dchat_server.rs
doors_lib/rust/dchat/src/data/: base_dao.rs  data.rs  db_config.rs  mod.rs  partner.rs  partner_dao.rs
doors_lib/rust/dchat/src/idl/: base_generated.rs  mod.rs  partner_generated.rs
doors_lib/rust/dchat/src/kits/: ids.rs  mod.rs  paths.rs
doors_lib/rust/dchat/src/server/: chat_server.rs  config.rs  frame_handle.rs  mod.rs  shared.rs
doors_lib/rust/dchat/src/server/handle_impl/: handle_message.rs  handle_message_ack.rs  handles.rs  mod.rs
doors_lib/rust/ffi_rpc/: Cargo.toml  build.rs  cbindgen.toml
doors_lib/rust/ffi_rpc/include/: ffi_rpc.h
doors_lib/rust/ffi_rpc/src/: ffi.rs  header_type.rs  lib.rs  lib_app.rs
doors_lib/rust/ffi_rpc/src/chat/: chat_service.rs  mod.rs
doors_lib/rust/ffi_rpc/src/discover/: discover_call.rs  mdns.rs  mod.rs  multicast.rs  net.rs  net_discover_type.rs  net_ip.rs  net_ip_guest.rs  net_ip_host.rs  partner_service_guest.rs  partner_service_host.rs  partner_service_info.rs
doors_lib/rust/ffi_rpc/src/ffi_impl/: ffi_.rs  ffi_bytes.rs  mod.rs
doors_lib/rust/ffi_rpc/src/net/: mdns.rs  mod.rs  partner_service_info.rs
doors_lib/rust/idl/: Cargo.toml  rustfmt.toml
doors_lib/zig/ffi_rpc/: build.zig  build.zig.zon
go/: go.mod
go/idl/: Frame.go  FrameType.go  Header.go  Int128.go  Int128_32.go  Int128_64.go  Int128_8.go  Message.go  MessageAck.go  MessageBody.go  MessageHeader.go  OnLine.go  OnLineAck.go  Partner.go
idl/: base.fbs  build_go.bat  build_rust.bat  member.fbs  partner.fbs
rust/: Cargo.toml  readme.md
rust/app_egui/: Cargo.toml
rust/app_egui/src/: bars.rs  dchat_ui.rs  integrate_egui.rs  lib.rs  message.rs  run.rs
rust/app_egui/src/app/: dchat_android.rs  dchat_web.rs
rust/dchat/: Cargo.toml  build.rs
rust/dchat/src/: lib.rs
rust/dchat/src/data/: base_dao.rs  data.rs  mod.rs  partner.rs  partner_dao.rs  partner_impl.rs
rust/dchat/src/idl/: base_generated.rs  mod.rs  partner_generated.rs
rust/dchat/src/kits/: ids.rs  mod.rs
rust/dchat/src/server/: chat_server.rs  config.rs  shared.rs
rust/dchat/src/server/handle_impl/: handle_message.rs  handle_message_ack.rs
rust/src/: chat_server.rs  config.rs  frame_handle.rs  lib.rs  main.rs  run.rs  shared.rs
rust/src/app/: dchat_android.rs  dchat_pc.rs
rust/src/cmd/: chat_server.rs
rust/src/da/: data.rs  db_config.rs  member.rs
rust/src/data/: data.rs  db_config.rs  member.rs  mod.rs  partner.rs  partner_impl.rs
rust/src/idl/: base_generated.rs  mod.rs
rust/src/kits/: mod.rs  paths.rs
rust/src/server/: chat_server.rs  frame_handle.rs  mod.rs  shared.rs
rust/src/server/handle_impl/: handle_message_ack.rs  handles.rs  mod.rs
rust/src/ui/: bars.rs  dchat_ui.rs  integrate_egui.rs  message.rs  mod.rs  partner.rs  run.rs
src/idl/: base.fbs  base_generated.rs  build_rust.bat
(+204 files in other folders)
