
[workspace]
resolver = "2"
members = ["doors_app/rust/app_egui", "doors_lib/rust/dchat"
, "doors_lib/rust/ffi_rpc", "doors_lib/rust/idl"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
log = { version = "0.4.28", features = [
    "max_level_debug",
    "release_max_level_info",
] }
env_logger = "0.11.8"

anyhow = "1.0.100"
strum = "0.27"
strum_macros = "0.27"

toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
flatbuffers = "25.9.23"

#io-uring = "0.5.2"
signal-hook = "0.3.18"
mio = { version = "1.0.4", features = ["os-poll", "net"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread","macros","net","sync","time"] }
tokio-util = "0.7.16"
parking_lot = "0.12.5"

netwatcher = "0.4.0"
socket2 = "0.6.1"
libc = "0.2.162"

#data
# rocksdb = "0.24.0"
redis_rocksdb = { version = "0.3.9", git = "https://github.com/peacess/redis_rocksdb.git" }
os_info = "3.12.0"

#security
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.17.0" }
x25519-dalek = { version = "2.0.1", features = ["static_secrets","getrandom"] }
curve25519-dalek = "4.1.3"
rand_core = "0.9.3"
uuid = { version = "1.18.1", features = ["v7"] }
ulid = "1.2.1"

#ui
egui = { version = "0.33.0" }
eframe = { version = "0.33.0", features = ["wgpu","android-native-activity","default_fonts"] }
egui_extras = "0.33.0"
android_logger = "0.15.1"
#ui

#[build-dependencies]
cbindgen = "0.29.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 2 # fast and small wasm
