
[workspace]
resolver = "2"
members = ["doors_app/rust/app_egui", "doors_lib/rust/dchat"
, "doors_lib/rust/ffi_rpc", "doors_lib/rust/idl"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
log = { version = "0.4.29", features = [
    "max_level_debug",
    "release_max_level_info",
] }
env_logger = "0.11.8"

anyhow = "1.0.100"
strum = "0.27"
strum_macros = "0.27"

toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
flatbuffers = { version = "25.12.19", default-features = true }

#io-uring = "0.5.2"
signal-hook = "0.4.1"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread","macros","net","sync","time"] }
tokio-util = "0.7.18"
parking_lot = "0.12.5"

netwatcher = "0.4.1"
socket2 = "0.6.1"
libc = "0.2.180"

#data
# rocksdb = "0.24.0"
redis_rocksdb = { version = "0.3.10", git = "https://github.com/peacess/redis_rocksdb.git" }
os_info = "3.14.0"

#security
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.17.0" }
x25519-dalek = { version = "2.0.1", features = ["static_secrets","getrandom"] }
curve25519-dalek = "4.1.3"
rand_core = "0.9.5"
uuid = { version = "1.19.0", features = ["v7"] }
ulid = "1.2.1"

#ui
egui = { version = "0.33.3" }
eframe = { version = "0.33.3", features = ["wgpu","android-native-activity","default_fonts"] }
egui_extras = "0.33.3"
android_logger = "0.15.1"
#ui

#[build-dependencies]
cbindgen = "0.29.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 2 # fast and small wasm
