[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.8.0"
#io-uring = "0.5.2"
flatbuffers = "2.0.0"

#[lib]
#name="chat_server"
#path="src/lib.rs"

[[bin]]
name="chat_server"
path= "src/main.rs"