[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0.55"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook = "0.3.13"
mio = { version = "0.8.0", features = ["os-poll","net"] }
#io-uring = "0.5.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
flatbuffers = "2.0.0"

ckb-rocksdb = "0.16.2"
redis_rocksdb = "0.1.3"

#[lib]
#name="chat_server"
#path="src/lib.rs"

[[bin]]
name="chat_server"
path= "src/cmd/chat_server.rs"