[package]
name = "dchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 2 # fast and small wasm

[dependencies]
log = "0.4.14"
anyhow = "1.0.55"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook = "0.3.13"
mio = { version = "0.8.0", features = ["os-poll","net"] }
#io-uring = "0.5.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
flatbuffers = "2.0.0"

ckb-rocksdb = "0.16.2"
redis_rocksdb = { version = "0.1.3", path= "../../redis_rocksdb" }


# ui ui
egui_wgpu_backend = "0.16"
chrono = "0.4"
pollster = "0.2"
egui = "0.16"
epi = "0.16"
egui_winit_platform = "0.13"
wgpu = "0.12"
winit = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
ndk      = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
ndk-glue = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }

[package.metadata.android]
apk_label = "dchat"
target_sdk_version = 30
min_sdk_version = 19
# ui ui


[lib]
name="dchat"
path="src/lib.rs"

[[bin]]
name="chat_server"
path= "src/app/dchat_server.rs"

[[bin]]
name="dchat_pc"
path= "src/app/dchat_pc.rs"
[[bin]]
name="dchat_android"
path= "src/app/dchat_android.rs"
[[bin]]
name="dchat_web"
path= "src/app/dchat_web.rs"