[package]
name = "dchat_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ui ui
egui_wgpu_backend = "0.16"
chrono = "0.4"
pollster = "0.2"
egui = "0.16"
epi = "0.16"
egui_winit_platform = "0.13"
wgpu = "0.12"
winit = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
ndk = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
ndk-glue = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }

[package.metadata.android]
apk_label = "dchat"
target_sdk_version = 30
min_sdk_version = 19
# ui ui


[[bin]]
name = "dchat_pc"
path = "src/app/dchat_pc.rs"
[[bin]]
name = "dchat_android"
path = "src/app/dchat_android.rs"
[[bin]]
name = "dchat_web"
path = "src/app/dchat_web.rs"
