[package]
name = "dchat_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ui
chrono = "0.4"
pollster = "0.2"
eframe = "0.18"
egui = "0.18"

[target.'cfg(target_os = "android")'.dependencies]
ndk = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
ndk-glue = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }

[package.metadata.android]
apk_label = "dchat"
target_sdk_version = 30
min_sdk_version = 19
# ui ui

[features]
#default = ["eframe/wgpu"]

[[bin]]
name = "dchat_pc"
path = "src/app/dchat_pc.rs"
[[bin]]
name = "dchat_android"
path = "src/app/dchat_android.rs"
[[bin]]
name = "dchat_web"
path = "src/app/dchat_web.rs"
