[package]
name = "dchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 2 # fast and small wasm

[dependencies]
log = "0.4.14"
anyhow = "1.0.55"
uuid = { version = "1.0.0", features = ["v4"] }

toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook = "0.3.13"
mio = { version = "0.8.0", features = ["os-poll", "net"] }
#io-uring = "0.5.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
flatbuffers = "2.0.0"

ckb-rocksdb = "0.16.2"
redis_rocksdb = { version = "0.1.3", path = "../../../redis_rocksdb" }

#security
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.17.0" }
x25519-dalek = "1.2.0"
curve25519-dalek = "3.2.1"
rand_core = "0.5.1"

#[build-dependencies]
#flatc = "0.2.1+2.0.0"

[lib]
name = "dchat"
path = "src/lib.rs"

[[bin]]
name = "dchat_server"
path = "src/app/dchat_server.rs"
