[package]
name = "doors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# ui
miniquad = { version = "0.4.8", features = ["log-impl"] }
egui = "0.32.2"
egui-miniquad = "0.16.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }
ndk-glue = { git = "https://github.com/nikita-skobov/android-ndk-rs", branch = "miniglue" }

[package.metadata.android]
apk_label = "doors"
target_sdk_version = 33
min_sdk_version = 19
[package.metadata.android.application.activity]
launch_mode = "singleTop"
# ui ui

[features]
default = []

[[bin]]
name = "doors_pc"
path = "src/app/pc.rs"
[[bin]]
name = "doors_android"
path = "src/app/android.rs"
[[bin]]
name = "doors_web"
path = "src/app/web.rs"
