[package]
name = "doors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
# ui
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
# ui ui
[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true

[package.metadata.android]
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 35

[features]
default = []

[[bin]]
name = "doors_pc"
path = "src/app/pc.rs"
[[bin]]
name = "doors_android"
path = "src/app/android.rs"
[[bin]]
name = "doors_web"
path = "src/app/web.rs"
