[package]
name = "dchat"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 2 # fast and small wasm

[dependencies]
log.workspace = true
anyhow.workspace = true
uuid.workspace = true

toml.workspace = true
serde.workspace = true
signal-hook.workspace = true
mio.workspace = true
#io-uring = "0.5.2"
tokio.workspace = true
flatbuffers.workspace = true

#data
# rocksdb = "0.24.0"
redis_rocksdb.workspace = true
os_info.workspace = true

#security
libsignal-protocol.workspace = true
x25519-dalek.workspace = true
curve25519-dalek.workspace = true

#[build-dependencies]
#flatc = "0.2.1+2.0.0"

idl = { path = "../idl" }


[lib]
name = "dchat"
path = "src/lib.rs"

[[bin]]
name = "dchat_server"
path = "src/app/dchat_server.rs"
