[package]
name = "ffi_rpc"
version.workspace = true
edition.workspace = true

[lib]
name = "ffi_rpc"
crate-type = ["cdylib"]

[dependencies]
log.workspace = true
flatbuffers.workspace = true
network-interface.workspace = true
netwatcher.workspace = true
libmdns.workspace = true

[build-dependencies]
cbindgen.workspace = true